--- a/fluidSimulation/shaders.qrc
+++ b/fluidSimulation/shaders.qrc
@@ -1,6 +1,7 @@
 <RCC>
-    <qresource prefix="">
+    <qresource prefix="/">
         <file>src/shaders/vertex_shader.glsl</file>
         <file>src/shaders/fragment_shader.glsl</file>
+        <file>src/shaders/compute_shader.glsl</file>
     </qresource>
 </RCC>
